--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
     "captcha_service": "capmonster/2captcha",
-    "captcha_api_key": "",
-    "invite": "Invite / InviteCode",
+    "captcha_api_key": "4566873256365b18d76937719f83cc36",
+    "invite": "https://discord.gg/j3t2hnBB6Z",
     "joinDelay": 3000,
     "useProxies": false,
     "boost": {
         "enabled": false,
         "delay": 3000,
-        "serverId": "serverId"
+        "serverId": "1117923501194629233"
     }
 }
